# evolve

./: .coverage  .gitignore  CLAUDE.md  COMMIT_MSG  README.md  SPEC.md  agent.py  costs.py  evolve.py  evolve.toml  hooks.py  loop.py  pyproject.toml  tui.py
SPEC/archive/: 001-package-migration.md  002-multi-call-design-history.md  003-legacy-runs-migration.md  (+33 more)
agents/: analyst.md  architect.md  archivist.md  curator.md  dev.md  pm.md  qa.md  quick-flow-solo-dev.md  reviewer.md  sm.md  ux-designer.md
evolve/: __init__.py  __main__.py  agent.py  agent_runtime.py  cli.py  cli_config.py  cli_utils.py  costs.py  diagnostics.py  diff_agent.py  draft_review.py  git.py  hooks.py  memory_curation.py  oneshot_agents.py  orchestrator.py  orchestrator_constants.py  orchestrator_helpers.py  orchestrator_oneshots.py  orchestrator_startup.py  party.py  prompt_builder.py  prompt_diagnostics.py  reporting.py  round_lifecycle.py  round_runner.py  round_success.py  sdk_runner.py  spec_archival.py  state.py  state_improvements.py  subprocess_monitor.py  sync_readme.py  updater.py  watcher.py
prompts/: draft.md  review.md  system.md
runs/: improvements.md  memory.md
tasks/: memory-curation.md  review-adversarial-round.md  spec-archival.md
tests/: conftest.py  test_agent.py  test_agent_async.py  test_agent_coverage.py  test_agent_extended.py  test_agent_retry_coverage.py  test_agent_runtime.py  test_agent_sdk_coverage.py  test_agent_warn.py  test_allow_installs.py  test_application_layer.py  test_backlog_discipline.py  test_backlog_drained_skip.py  test_cli_config_interfaces_module.py  test_cli_config_module.py  test_cli_utils_infra_module.py  test_cli_utils_module.py  test_constant_drift.py  test_convergence_gate.py  test_costs.py  test_costs_infrastructure_module.py  test_diagnostics_detector_module.py  test_diagnostics_patching.py  test_diff.py  test_diff_agent_infra_module.py  test_diff_agent_module.py  test_domain_types.py  test_draft_review_migration_module.py  test_draft_review_module.py  test_dry_run.py  test_entry_point_integrity.py  test_evolution_report_basic.py  test_evolve.py  test_evolve_coverage.py  test_evolve_extended.py  test_evolve_subcommands.py  test_file_size_cap.py  test_file_size_enforcement.py  test_frame_capture.py  test_git_adapter_module.py  (+89 more)
(+68 files in other folders)
