[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolve"
version = "0.1.0"
description = "Self-improving evolution loop for any project, powered by Claude."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "claude-agent-sdk",
]

[project.optional-dependencies]
rich = ["rich"]
vision = ["cairosvg"]
dev = ["rich", "pytest", "pytest-cov"]

[project.scripts]
evolve = "evolve:main"

[tool.setuptools]
py-modules = ["evolve", "loop", "agent", "tui", "hooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["."]
omit = [
    ".venv/*",
    "tests/*",
    "runs/*",
    "__pycache__/*",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
