[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolve"
version = "0.1.0"
description = "Self-improving evolution loop for any project, powered by Claude."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "claude-agent-sdk",
    "rich",
    "cairosvg",
]

[project.optional-dependencies]
# `rich` and `cairosvg` are also declared in [project] dependencies so
# evolve installs ready-to-use; the optional groups remain so users can
# explicitly opt into a richer extras set (and to keep the SPEC §
# "Optional dependency groups" claim aligned with packaging metadata).
rich = ["rich"]
vision = ["cairosvg"]
dev = ["pytest", "pytest-cov", "rich"]

[project.scripts]
evolve = "evolve.interfaces.cli.main:main"
evolve-watch = "evolve.interfaces.watcher:main"

[tool.setuptools.packages.find]
include = ["evolve*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["evolve"]
omit = [
    ".venv/*",
    "tests/*",
    "runs/*",
    "__pycache__/*",
]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
